# slope

./: .gitignore  Cargo.toml  fib.js  fib.py  fib.rb  fib.sl  rustfmt.toml  sum.rb  sum.sl  test.scheme
fuzz/: Cargo.toml
fuzz/src/: main.rs
fuzz/test/: anf.sl  deep.sl  quicksort.sl  trivial.sl
slope-derive/: Cargo.toml  lib.rs
slope-format/: Cargo.toml
slope-format/src/: lib.rs
slope-parse/: Cargo.toml
slope-parse/src/: lib.rs  source.rs
slope-types/: Cargo.toml
slope-types/src/: gc.rs  lib.rs  object.rs  symbol.rs  trace.rs  value.rs
slope-types/tests/: test.rs
slope-vm/: Cargo.toml  build.rs
slope-vm/src/: assemble.rs  compile.rs  expr.rs  form.rs  lib.rs  macros.rs  syntax.rs  vm.rs
slope-vm/tests/: all.rs  def.sl  def_syntax.sl  fn.sl  if.sl  import.sl  let.sl  let_syntax.sl  quicksort.sl
slope-vm/tests/mods/: test.sl
src/: lib.rs  main.rs  repl.rs
src/repl/: helper.rs  highlight.rs  validate.rs
src/std/: prelude.sl
