[package]
name = "slope"
version = "0.1.0"
authors = ["Rolf Timmermans <rolftimmermans@voormedia.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
slope-vm = {path = "slope-vm"}

termcolor = {version = "*", default-features = false}
dirs = {version = "*", default-features = false}
memchr = {version = "*", default-features = false}
rustyline = {version = "*", default-features = false}
rustyline-derive = {version = "*", default-features = false}
mimalloc = {version = "*", default-features = false}

[workspace]
members = [
    #"fuzz-parse",
    "slope-derive",
    "slope-parse",
    "slope-types",
    "slope-vm",
]
